--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,3 +1,7 @@
+.card-header{
+    margin: 0;
+    padding:0;
+}
 .navbar{
     height: 7vh;
 }
@@ -9,3 +13,4 @@
 .page-wrapper{
     min-height: 88vh;
 }
+
